reviews item spacing fix

--- a/source/sass/blocks/_reviews.scss
+++ b/source/sass/blocks/_reviews.scss
@@ -94,6 +94,9 @@
       grid-gap: 1.5rem;
       flex-direction: column;
     }
+    &__row-item {
+      padding: rem(20);
+    }
     &__row-descr {
       p {
         font-size: 1rem;
